序列  集合转换

--- a/app/4.序列、集合转换.md
+++ b/app/4.序列、集合转换.md
@@ -1,7 +1,7 @@
 
 
 # 1.序列
-除集合外 还有一种容器 Sequenec<T> 
+除集合外 还有一种容器 Sequenec<T>
 
 ## 1.1 元素
 val n = sequenecof("one","two")
@@ -22,7 +22,7 @@ val oddNumbersLessThan10 = generateSequence(1) { if (it + 2 < 10) it + 2 else nu
 println(oddNumbersLessThan10.count())
 ```
 ## 1.4 组块、
-```java
+```kotlin
     val oddNumbers = sequence {
         yield(1)
         yieldAll(listOf(3, 5))
@@ -31,7 +31,7 @@ println(oddNumbersLessThan10.count())
     println(oddNumbers.take(5).toList())
 ```
     每一个sequence 内部都是一个元素，虽然是函数
-    
+
 ##  1.5 序列操作
 可以独立处理每个元素 map()  filter()
 take() drop()
@@ -61,9 +61,9 @@ Sequence 执行同时满足多种条件的逻辑
     println("Lengths of first 4 words longer than 3 chars")
 // 末端操作：以列表形式获取结果。
     println(lengthsSequence.toList())
-    
+
     结果：
-    
+
   ```
     Lengths of first 4 words longer than 3 chars
     filter: The
@@ -123,11 +123,3 @@ join 等待执行完毕
 runBlocking 与 coroutineScope 可能看起来很类似，因为它们都会等待其协程体以及所有⼦协程结束。主要
 区别在于，runBlocking ⽅法会阻塞当前线程来等待，⽽ coroutineScope 只是挂起，会释放底层线程⽤于其他
 ⽤途。
-
-
-
-
-
-
-
-
