--- a/app/4.序列、集合转换.md
+++ b/app/4.序列、集合转换.md
@@ -2,6 +2,10 @@
 
 
 
+
+
+
+
 # 4 协程
 
 轻量级线程、
@@ -9,7 +13,7 @@ delay 挂起函数，不造成阻塞，会挂起协程，只能在协程里用
 runBlocking 阻塞
 join 等待执行完毕
 
-runBlocking 与 coroutineScope 可能看起来很类似，因为它们都会等待其协程体以及所有⼦协程结束。主要
+**runBlocking 与 coroutineScope** 可能看起来很类似，因为它们都会等待其协程体以及所有⼦协程结束。主要
 区别在于，runBlocking ⽅法会阻塞当前线程来等待，⽽ coroutineScope 只是挂起，会释放底层线程⽤于其他
 ⽤途。
 
