梳理基础语法  集合操作

--- a/MD/3.协程.md
+++ b/MD/3.协程.md
@@ -1,9 +1,31 @@
 
 
-# 4 协程
+Kotlin 是一门仅在标准库中提供最基本底层 API 以便各种其他库能够利用协程的语言。与许多其他具有类似功能的语言不同，`async` 与 `await` 在 Kotlin 中并不是关键字，甚至都不是标准库的一部分。此外，Kotlin 的 *挂起函数* 概念为异步操作提供了比 future 与 promise 更安全、更不易出错的抽象。
 
-轻量级线程、
-delay 挂起函数，不造成阻塞，会挂起协程，只能在协程里用
+
+
+# 1.协程基础
+
+```
+import kotlinx.coroutines.*
+
+fun main() {
+    GlobalScope.launch { // 在后台启动一个新的协程并继续
+        delay(1000L) // 非阻塞的等待 1 秒钟（默认时间单位是毫秒）
+        println("World!") // 在延迟后打印输出
+    }
+    println("Hello,") // 协程已在等待时主线程还在继续
+    Thread.sleep(2000L) // 阻塞主线程 2 秒钟来保证 JVM 存活
+}
+```
+
+协程是轻量级的线程。 它们在某些 [CoroutineScope](https://kotlin.github.io/kotlinx.coroutines/kotlinx-coroutines-core/kotlinx.coroutines/-coroutine-scope/index.html) 上下文中与 [launch](https://kotlin.github.io/kotlinx.coroutines/kotlinx-coroutines-core/kotlinx.coroutines/launch.html) *协程构建器* 一起启动。 这里我们在 [GlobalScope](https://kotlin.github.io/kotlinx.coroutines/kotlinx-coroutines-core/kotlinx.coroutines/-global-scope/index.html) 中启动了一个新的协程，这意味着新协程的生命周期只受整个应用程序的生命周期限制。
+
+ [delay](https://kotlin.github.io/kotlinx.coroutines/kotlinx-coroutines-core/kotlinx.coroutines/delay.html) 是一个特殊的 *挂起函数* ，它不会造成线程阻塞，但是会 *挂起* 协程，并且只能在协程中使用。
+
+
+
+
 runBlocking 阻塞
 join 等待执行完毕
 suspend
@@ -25,7 +47,7 @@ GlobalScope.launch {
 delay(1300L) // 在延迟后退出
 ```
 
-## 取消与超时
+## 2.取消与超时
 
 cancel()
 
@@ -46,9 +68,38 @@ delay(1300L) // 延迟一段时间
 println("main: I'm tired of waiting!")
 job.cancel() // 取消该作业
 job.join() // 等待作业执行结束
+
+job: I'm sleeping 0 ...
+job: I'm sleeping 1 ...
+job: I'm sleeping 2 ...
+main: I'm tired of waiting!
+main: Now I can quit.
 ```
 
+一旦 main 函数调用了 `job.cancel`，我们在其它的协程中就看不到任何输出，因为它被取消了。 这里也有一个可以使 [Job](https://kotlin.github.io/kotlinx.coroutines/kotlinx-coroutines-core/kotlinx.coroutines/-job/index.html) 挂起的函数 [cancelAndJoin](https://kotlin.github.io/kotlinx.coroutines/kotlinx-coroutines-core/kotlinx.coroutines/cancel-and-join.html) 它合并了对 [cancel](https://kotlin.github.io/kotlinx.coroutines/kotlinx-coroutines-core/kotlinx.coroutines/-job/cancel.html) 以及 [join](https://kotlin.github.io/kotlinx.coroutines/kotlinx-coroutines-core/kotlinx.coroutines/-job/join.html) 的调用。
+
+#### 取消是 *协作* 的
+
 协程的取消是 *协作* 的。一段协程代码必须协作才能被取消。 所有 `kotlinx.coroutines` 中的挂起函数都是 *可被取消的* 。它们检查协程的取消， 并在取消时抛出 [CancellationException](https://kotlin.github.io/kotlinx.coroutines/kotlinx-coroutines-core/kotlinx.coroutines/-cancellation-exception/index.html)。 然而，如果协程正在执行计算任务，并且没有检查取消的话，那么它是不能被取消的
+
+```
+val startTime = System.currentTimeMillis()
+val job = launch(Dispatchers.Default) {
+    var nextPrintTime = startTime
+    var i = 0
+    while (i < 5) { // 一个执行计算的循环，只是为了占用 CPU
+        // 每秒打印消息两次
+        if (System.currentTimeMillis() >= nextPrintTime) {
+            println("job: I'm sleeping ${i++} ...")
+            nextPrintTime += 500L
+        }
+    }
+}
+delay(1300L) // 等待一段时间
+println("main: I'm tired of waiting!")
+job.cancelAndJoin() // 取消一个作业并且等待它结束
+println("main: Now I can quit.")
+```
 
 
 
@@ -79,7 +130,56 @@ job.cancelAndJoin() // 取消该作业并等待它结束
 println("main: Now I can quit.")
 ```
 
-## 超时 timeout
+### 在 `finally` 中释放资源
+
+我们通常使用如下的方法处理在被取消时抛出 CancellationException 的可被取消的挂起函数。比如说，try {……} finally {……} 表达式以及 Kotlin 的 use 函数一般在协程被取消的时候执行它们的终结动作：
+
+```
+
+val job = launch {
+    try {
+        repeat(1000) { i ->
+            println("job: I'm sleeping $i ...")
+            delay(500L)
+        }
+    } finally {
+        println("job: I'm running finally")
+    }
+}
+delay(1300L) // 延迟一段时间
+println("main: I'm tired of waiting!")
+job.cancelAndJoin() // 取消该作业并且等待它结束
+println("main: Now I can quit.")
+```
+
+### 运行不能取消的代码块
+
+```
+val job = launch {
+    try {
+        repeat(1000) { i ->
+            println("job: I'm sleeping $i ...")
+            delay(500L)
+        }
+    } finally {
+        withContext(NonCancellable) {
+            println("job: I'm running finally")
+            delay(1000L)
+            println("job: And I've just delayed for 1 sec because I'm non-cancellable")
+        }
+    }
+}
+delay(1300L) // 延迟一段时间
+println("main: I'm tired of waiting!")
+job.cancelAndJoin() // 取消该作业并等待它结束
+println("main: Now I can quit.")
+```
+
+
+
+##  超时 timeout
+
+在实践中绝大多数取消一个协程的理由是它有可能超时。 当你手动追踪一个相关 [Job](https://kotlin.github.io/kotlinx.coroutines/kotlinx-coroutines-core/kotlinx.coroutines/-job/index.html) 的引用并启动了一个单独的协程在延迟后取消追踪，这里已经准备好使用 [withTimeout](https://kotlin.github.io/kotlinx.coroutines/kotlinx-coroutines-core/kotlinx.coroutines/with-timeout.html) 函数来做这件事。 
 
 ```kotlin
 withTimeout(1300L) {
