--- a/MD/3.协程.md
+++ b/MD/3.协程.md
@@ -384,7 +384,7 @@ suspend fun failedConcurrentSum(): Int = coroutineScope {
 
 请注意，如果其中一个子协程（即 `two`）失败，第一个 `async` 以及等待中的父协程都会被取消：
 
-# 5 协程上下文与调度器
+# 4 协程上下文与调度器
 
 协程总是运行在一些以 [CoroutineContext](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.coroutines/-coroutine-context/) 类型为代表的上下文中，它们被定义在了 Kotlin 的标准库里。
 
@@ -435,7 +435,7 @@ fun main() = runBlocking<Unit> {
 
 请注意，[CoroutineScope](https://kotlin.github.io/kotlinx.coroutines/kotlinx-coroutines-core/kotlinx.coroutines/-coroutine-scope/index.html) 中的 [isActive](https://kotlin.github.io/kotlinx.coroutines/kotlinx-coroutines-core/kotlinx.coroutines/is-active.html) 只是 `coroutineContext[Job]?.isActive == true` 的一种方便的快捷方式。
 
-## 在不同线程间跳转
+## 3 在不同线程间跳转
 
 其中一个使用 [runBlocking](https://kotlin.github.io/kotlinx.coroutines/kotlinx-coroutines-core/kotlinx.coroutines/run-blocking.html) 来显式指定了一个上下文，并且另一个使用 [withContext](https://kotlin.github.io/kotlinx.coroutines/kotlinx-coroutines-core/kotlinx.coroutines/with-context.html) 函数来改变协程的上下文，而仍然驻留在相同的协程中
 
@@ -461,7 +461,7 @@ fun main() {
 }
 ```
 
-## 子协程
+## 4 子协程
 
 当一个协程被其它协程在 [CoroutineScope](https://kotlin.github.io/kotlinx.coroutines/kotlinx-coroutines-core/kotlinx.coroutines/-coroutine-scope/index.html) 中启动的时候， 它将通过 [CoroutineScope.coroutineContext](https://kotlin.github.io/kotlinx.coroutines/kotlinx-coroutines-core/kotlinx.coroutines/-coroutine-scope/coroutine-context.html) 来承袭上下文，并且这个新协程的 [Job](https://kotlin.github.io/kotlinx.coroutines/kotlinx-coroutines-core/kotlinx.coroutines/-job/index.html) 将会成为父协程作业的 *子* 作业。当一个父协程被取消的时候，所有它的子协程也会被递归的取消。
 
@@ -496,7 +496,7 @@ job1: I am not affected by cancellation of the request
 main: Who has survived request cancellation?
 ```
 
-## 父协程的职责
+## 5 父协程的职责
 
 一个父协程总是等待所有的子协程执行结束。父协程并不显式的跟踪所有子协程的启动，并且不必使用 [Job.join](https://kotlin.github.io/kotlinx.coroutines/kotlinx-coroutines-core/kotlinx.coroutines/-job/join.html) 在最后的时候等待它们：
 
@@ -515,7 +515,7 @@ request.join() // 等待请求的完成，包括其所有子协程
 println("Now processing of the request is complete")
 ```
 
-### 命名协程
+## 6 命名协程
 
 ```
 import kotlinx.coroutines.*
@@ -539,7 +539,7 @@ fun main() = runBlocking(CoroutineName("main")) {
 }
 ```
 
-### 协程作用域
+## 7 协程作用域
 
 假设我们的应用程序拥有一个具有生命周期的对象，但这个对象并不是一个协程。举例来说，我们编写了一个 Android 应用程序并在 Android 的 activity 上下文中启动了一组协程来使用异步操作拉取并更新数据以及执行动画等等。所有这些协程必须在这个 activity 销毁的时候取消以避免内存泄漏。当然，我们也可以手动操作上下文与作业，以结合 activity 的生命周期与它的协程，但是 `kotlinx.coroutines` 提供了一个封装：[CoroutineScope](https://kotlin.github.io/kotlinx.coroutines/kotlinx-coroutines-core/kotlinx.coroutines/-coroutine-scope/index.html) 的抽象。 你应该已经熟悉了协程作用域，因为所有的协程构建器都声明为在它之上的扩展。
 
@@ -579,7 +579,7 @@ fun main() = runBlocking<Unit> {
 }
 ```
 
-### 线程局部数据 Threadlocal
+## 8 线程局部数据 Threadlocal  ？？？
 
 ```kotlin
 import kotlinx.coroutines.*
@@ -603,13 +603,15 @@ fun main() = runBlocking<Unit> {
 
 
 
-## 异步流
+# 5 异步流
 
-### 返回多个值
+挂起函数可以异步的返回单个值，也可以返回多个计算好的值。这正是 Kotlin 流（Flow）的用武之地。
+
+## 1 返回多个值
 
 在 Kotlin 中可以使用[集合](https://kotlinlang.org/docs/reference/collections-overview.html)来表示多个值
 
-```
+```kotlin
 fun simple(): List<Int> = listOf(1, 2, 3)
 
 fun main() {
@@ -617,15 +619,30 @@ fun main() {
 }
 ```
 
-#### 序列
+## 2 序列--（序列和集合的区别？）
 
-	如果使用一些消耗 CPU 资源的阻塞代码计算数字（每次计算需要 100 毫秒）那么我们可以使用 [Sequence](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.sequences/index.html) 来表示数字：
+如果使用一些消耗 CPU 资源的阻塞代码计算数字（每次计算需要 100 毫秒）那么我们可以使用 [Sequence]来表示数字：
 
-#### 挂起函数
+```kotlin
+fun simple(): Sequence<Int> = sequence { // 序列构建器
+    for (i in 1..3) {
+        Thread.sleep(100) // 假装我们正在计算
+        yield(i) // 产生下一个值
+    }
+}
 
-计算过程阻塞运行该代码的主线程。 当这些值由异步代码计算时，我们可以使用 `suspend` 修饰符标记函数 `simple`， 这样它就可以在不阻塞的情况下执行其工作并将结果作为列表返回：
-
+fun main() {
+    simple().forEach { value -> println(value) } 
+}
 ```
+
+
+
+## 3  挂起函数 suspend
+
+如果计算过程阻塞了主线程运行的代码， 当这些值由异步代码计算时，我们可以使用 `suspend` 修饰符标记函数 `simple`， 这样它就可以在**不阻塞的情况下**执行其工作并将结果作为列表返回：
+
+```kotlin
 suspend fun simple(): List<Int> {
     delay(1000) // 假装我们在这里做了一些异步的事情
     return listOf(1, 2, 3)
@@ -636,3 +653,70 @@ fun main() = runBlocking<Unit> {
 }
 ```
 
+## 4 流
+
+使用 List 结果类型，意味着我们只能一次返回所有值。 为了表示异步计算的值流（stream），我们可以使用 Flow 类型（正如同步计算值会使用 Sequence 类型）：
+
+```kotlin
+fun simple(): Flow<Int> = flow { // 流构建器
+    for (i in 1..3) {
+        delay(100) // 假装我们在这里做了一些有用的事情
+        emit(i) // 发送下一个值
+    }
+}
+
+fun main() = runBlocking<Unit> {
+    // 启动并发的协程以验证主线程并未阻塞
+    launch {
+        for (k in 1..3) {
+            println("I'm not blocked $k")
+            delay(100)
+        }
+    }
+    // 收集这个流
+    simple().collect { value -> println(value) } 
+}
+```
+
+- `flow { ... }` 构建块中的代码可以挂起。
+- 函数 `simple` 不再标有 `suspend` 修饰符。
+- 流使用 [emit](https://kotlin.github.io/kotlinx.coroutines/kotlinx-coroutines-core/kotlinx.coroutines.flow/-flow-collector/emit.html) 函数 *发射* 值。
+- 流使用 [collect](https://kotlin.github.io/kotlinx.coroutines/kotlinx-coroutines-core/kotlinx.coroutines.flow/collect.html) 函数 *收集* 值。
+
+## 流是冷的
+
+Flow 是一种类似于序列的冷流 — 这段 [flow](https://kotlin.github.io/kotlinx.coroutines/kotlinx-coroutines-core/kotlinx.coroutines.flow/flow.html) 构建器中的代码直到流被收集的时候才运行
+
+```kotlin
+ 
+fun simple(): Flow<Int> = flow { 
+    println("Flow started")
+    for (i in 1..3) {
+        delay(100)
+        emit(i)
+    }
+}
+
+fun main() = runBlocking<Unit> {
+    println("Calling simple function...")
+    val flow = simple()
+    println("Calling collect...")
+    flow.collect { value -> println(value) } 
+    println("Calling collect again...")
+    flow.collect { value -> println(value) } 
+}
+
+Calling simple function...
+Calling collect...
+Flow started
+1
+2
+3
+Calling collect again...
+Flow started
+1
+2
+3
+```
+
+这是返回一个流的 `simple` 函数没有标记 `suspend` 修饰符的主要原因。 通过它自己，`simple()` 调用会尽快返回且不会进行任何等待。该流在每次收集的时候启动， 这就是为什么当我们再次调用 `collect` 时我们会看到“Flow started”。
