--- a/MD/3.协程.md
+++ b/MD/3.协程.md
@@ -720,3 +720,39 @@ Flow started
 ```
 
 这是返回一个流的 `simple` 函数没有标记 `suspend` 修饰符的主要原因。 通过它自己，`simple()` 调用会尽快返回且不会进行任何等待。该流在每次收集的时候启动， 这就是为什么当我们再次调用 `collect` 时我们会看到“Flow started”。
+
+## 流的取消
+
+流采用与协程同样的协作取消。像往常一样，流的收集可以在当流在一个可取消的挂起函数（例如 [delay](https://kotlin.github.io/kotlinx.coroutines/kotlinx-coroutines-core/kotlinx.coroutines/delay.html)）中挂起的时候取消。 以下示例展示了当 [withTimeoutOrNull](https://kotlin.github.io/kotlinx.coroutines/kotlinx-coroutines-core/kotlinx.coroutines/with-timeout-or-null.html) 块中代码在运行的时候流是如何在超时的情况下取消并停止执行其代码的：
+
+```kotlin
+fun simple(): Flow<Int> = flow { 
+    for (i in 1..3) {
+        delay(100)          
+        println("Emitting $i")
+        emit(i)
+    }
+}
+
+fun main() = runBlocking<Unit> {
+    withTimeoutOrNull(250) { // 在 250 毫秒后超时
+        simple().collect { value -> println(value) } 
+    }
+    println("Done")
+}   
+```
+
+### 流构建器
+
+先前示例中的 `flow { ... }` 构建器是最基础的一个。还有其他构建器使流的声明更简单：
+
+- [flowOf](https://kotlin.github.io/kotlinx.coroutines/kotlinx-coroutines-core/kotlinx.coroutines.flow/flow-of.html) 构建器定义了一个发射固定值集的流。
+- 使用 `.asFlow()` 扩展函数，可以将各种集合与序列转换为流。
+
+因此，从流中打印从 1 到 3 的数字的示例可以写成：
+
+```
+// 将一个整数区间转化为流
+(1..3).asFlow().collect { value -> println(value)
+```
+
