1/SSL peer shut down incorrectly 2/密封类 委托类

--- a/MD/1.kotlin_基础语法.md
+++ b/MD/1.kotlin_基础语法.md
@@ -313,7 +313,7 @@ fun main() {
 
 ### 4.super 调用其超类的函数与属性访问器
 
-```
+```kotlin
 open class Rectangle {
     open fun draw() { println("Drawing a rectangle") }
     val borderColor: String get() = "black"
@@ -412,19 +412,17 @@ if (foo::bar.isInitialized) {
 }
 ```
 
-### 4 幕后字段和幕后属性？？？
+### 4 幕后字段和幕后属性
 
+https://blog.csdn.net/chentaishan/article/details/120908285
 
-
-### 5 编译期常量 *const* 
+### 5 编译期常量 *const*
 
 如果只读属性的值在编译期是已知的，那么可以使用 *const* 修饰符将其标记为*编译期常量*
 
+### 6. 委托属性
 
-
-### 6. 委托属性？？？
-
-
+https://blog.csdn.net/chentaishan/article/details/120953608
 
 # 4.接口
 
@@ -587,11 +585,34 @@ val (name, age) = jane
 println("$name, $age years of age") // 输出 "Jane, 35 years of age
 ```
 
-## 6.密封类？？？？
+## 6.密封类 sealed
 
 密封类用来表示受限的类继承结构：当一个值为有限几种的类型、而不能有任何其他类型时。
 
 在某种意义上，他们是**枚举类的扩展**：**枚举类型的值集合也是受限的**，但每个**枚举常量只存在一个实例**，而密封类的一个子类可以有可包**含状态的多个实例**。
+
+```kotlin
+sealed class Color {
+    // 只能在内部继承密封类
+    class Red(val value: Int) : Color()
+    class Green(val value: Int) : Color()
+    class Blue(val name: String) : Color()
+}
+
+fun isInstance(color: Color) {
+    when (color) {
+        // 必须写全所有条件，否则报错
+        is Color.Red -> TODO()
+        is Color.Green -> TODO()
+        is Color.Blue -> TODO()
+    }
+}
+```
+
+1. 默认情况下，密封类的**构造函数是私有**的。
+2. 密封类的所有子类必须在同一文件中声明。
+3. 添加 `sealed` 修饰符,所有子类都必须在与密封类自身相同的文件中声明
+4. 一个密封类是自身[抽象的](https://www.kotlincn.net/docs/reference/classes.html#抽象类)，它不能直接实例化,但可以有抽象（*abstract*）成员。
 
 ## 7.泛型
 
