--- a/MD/1.kotlin_基础语法.md
+++ b/MD/1.kotlin_基础语法.md
@@ -546,9 +546,7 @@ val <T> List<T>.lastIndex: Int
     get() = size - 1
 ```
 
-### 1.**伴生对象的扩展**????
-
-
+ 
 
 ## 5.数据类
 
@@ -905,9 +903,11 @@ object DataProviderManager {
 
 **注意**：对象声明不能在**局部作用域**（即直接嵌套在函数内部），但是它们可以嵌套到**其他对象声明或非内部类**中
 
-### **3 .伴生对象????**
+### **3 .伴生对象 companion object**
 
 类内部的对象声明可以用 *companion* 关键字标记：
+
+通过编译为：Java的静态内部类
 
 ```kotlin
 class MyClass {
@@ -979,7 +979,7 @@ fun main() {
 
 ## 12 内联类 inline
 
-
+有时候，业务逻辑需要围绕某种类型创建包装器。然而，由于额外的堆内存分配问题，它会引入运行时的性能开销。此外，如果被包装的类型是原生类型，性能的损失是很糟糕的，因为原生类型通常在运行时就进行了大量优化，然而他们的包装器却没有得到任何特殊的处理。
 
 为了解决这类问题，Kotlin 引入了一种被称为 `内联类` 的特殊类，它通过在类的前面定义一个 `inline` 修饰符来声明：
 
@@ -987,7 +987,7 @@ fun main() {
 inline class Password(val value: String)
 ```
 
-内联类必须含有**唯一的一个属性在主构造函数中初始化**。在运行时，将使用这个唯一属性来表示内联类的实例（关于运行时的内部表达请参阅[下文](https://www.kotlincn.net/docs/reference/inline-classes.html#表示方式)）：
+内联类必须含有**唯一的一个属性在主构造函数中初始化**。在运行时，将使用这个唯一属性来表示内联类的实例 
 
 ```
 // 不存在 'Password' 类的真实实例对象
@@ -1021,7 +1021,7 @@ fun main() {
 
 ### 2. 内联继承接口
 
-```
+```kotlin
 interface Printable {
     fun prettyPrint(): String
 }
@@ -1042,7 +1042,7 @@ fun main() {
 
 为了生成性能最优的代码，Kotlin 编译更倾向于使用基础类型而不是包装器。 然而，有时候使用包装器是必要的。一般来说，只要将内联类用作另一种类型，它们就会被装箱。
 
-```
+```kotlin
 interface I
 
 inline class Foo(val i: Int) : I
@@ -1074,7 +1074,7 @@ fun main() {
 
 由于内联类被编译为其基础类型，因此可能会导致各种模糊的错误，例如意想不到的平台签名冲突：
 
-```
+```kotlin
 inline class UInt(val x: Int)
 
 // 在 JVM 平台上被表示为'public final void compute(int x)'
@@ -1096,226 +1096,27 @@ fun compute(x: UInt) { }
 
 **内联类引入了一个真实的新类型**，与类型别名正好相反，**类型别名**仅仅是为现有的类型取了个新的替代名称(别名)：
 
-## 13 委托
-
-类似于Java的代理
-
 ```kotlin
-interface Base {
-    fun print()
-}
+typealias NameTypeAlias = String
+inline class NameInlineClass(val s: String)
 
-class BaseImpl(val x: Int) : Base {
-    override fun print() { print(x) }
-}
-
-class Derived(b: Base) : Base by b
+fun acceptString(s: String) {}
+fun acceptNameTypeAlias(n: NameTypeAlias) {}
+fun acceptNameInlineClass(p: NameInlineClass) {}
 
 fun main() {
-    val b = BaseImpl(10)
-    Derived(b).print()
+    val nameAlias: NameTypeAlias = ""
+    val nameInlineClass: NameInlineClass = NameInlineClass("")
+    val string: String = ""
+
+    acceptString(nameAlias) // 正确: 传递别名类型的实参替代函数中基础类型的形参
+    acceptString(nameInlineClass) // 错误: 不能传递内联类的实参替代函数中基础类型的形参
+
+    // And vice versa:
+    acceptNameTypeAlias(string) // 正确: 传递基础类型的实参替代函数中别名类型的形参
+    acceptNameInlineClass(string) // 错误: 不能传递基础类型的实参替代函数中内联类类型的形参
 }
 ```
-
-`Derived` 的超类型列表中的 *by*-子句表示 `b` 将会在 `Derived` 中内部存储， 并且编译器将生成转发给 `b` 的所有 `Base` 的方法。
-
-### 1.委托属性
-
-有一些常见的属性类型，虽然我们可以在每次需要的时候手动实现它们， 但是如果能够为大家把他们只实现一次并放入一个库会更好.
-
-- 延迟属性（lazy properties）: 其值只在首次访问时计算；
-
-- 可观察属性（observable properties）: 监听器会收到有关此属性变更的通知；
-
-- 把多个属性储存在一个映射（map）中，而不是每个存在单独的字段中。
-
-```kotlin
-class Example {
-    var p: String by Delegate()
-}
-```
-
-属性委托需要提供set和get方法，Delegate就是一个对象，内部提供了p的get-set方法。
-
-### 2 **延迟属性 Lazy**
-
-[`lazy()`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/lazy.html) 是接受一个 lambda 并返回一个 `Lazy <T>` 实例的函数，返回的实例可以作为实现延迟属性的委托
-
- 第一次调用 `get()` 会执行已传递给 `lazy()` 的 lambda 表达式并记录结果， 后续调用 `get()` 只是返回记录的结果。
-
-```kotlin
-val lazyValue: String by lazy {
-    println("computed!")
-    "Hello"
-}
-
-fun main() {
-    println(lazyValue)
-    println(lazyValue)
-}
-```
-
-默认情况下，**lazy是由同步锁的，某一刻只能一个线程在使用**。
-
-如果不必须同步锁，将`LazyThreadSafetyMode.PUBLICATION` 作为参数传递给 `lazy()` 函数
-
-如果你确定初始化和使用该属性在同一个线程，可以使用 `LazyThreadSafetyMode.NONE` 模式，他不会有任何线程安全的保证。
-
-### 3.**可观察属性 Observable**
-
-```kotlin
-//Delegates.observable() 接受两个参数：初始值与修改时处理程序（handler）。 每当我们给属性赋值时会调用该处理程序（在赋值后执行）。它有三个参数：被赋值的属性、旧值与新值：
-
-import kotlin.properties.Delegates
-
-class User {
-    var name: String by Delegates.observable("<no name>") {
-        prop, old, new ->
-        println("$old -> $new")
-    }
-}
-
-fun main() {
-    val user = User()
-    user.name = "first"
-    user.name = "second"
-}
-```
-
-### 4.委托给另一个属性
-
-从 Kotlin 1.4 开始，一个属性可以把它的 getter 与 setter 委托给另一个属性
-
-- 顶层属性
-- 同一个类的成员或扩展属性
-- 另一个类的成员或扩展属性
-
-为将一个属性委托给另一个属性，应在委托名称中使用恰当的 `::` 限定符
-
-```kotlin
-var topLevelInt: Int = 0
-
-class ClassWithDelegate(val anotherClassInt: Int)
-class MyClass(var memberInt: Int, val anotherClassInstance: ClassWithDelegate) {
-    var delegatedToMember: Int by this::memberInt
-    var delegatedToTopLevel: Int by ::topLevelInt
-    
-    val delegatedToAnotherClass: Int by anotherClassInstance::anotherClassInt
-}
-var MyClass.extDelegated: Int by ::topLevelInt
-```
-
-这是很有用的，例如，当想要以一种向后兼容的方式重命名一个属性的时候：引入一个新的属性、 使用 `@Deprecated` 注解来注解旧的属性、并委托其实现。
-
-```kotlin
-class MyClass {
-   var newName: Int = 0
-   @Deprecated("Use 'newName' instead", ReplaceWith("newName"))
-   var oldName: Int by this::newName
-}
-
-fun main() {
-   val myClass = MyClass()
-   // 通知：'oldName: Int' is deprecated.
-   // Use 'newName' instead
-   myClass.oldName = 42
-   println(myClass.newName) // 42
-}
-```
-
-### 5.将属性储存在映射中
-
-```kotlin
-//一个常见的用例是在一个映射（map）里存储属性的值
-class User(val map: Map<String, Any?>) {
-    val name: String by map
-    val age: Int     by map
-}
-```
-
-```
-val user = User(mapOf(
-    "name" to "John Doe",
-    "age"  to 25
-))
-```
-
-```
-println(user.name)
-```
-
-也适用于 *var* 属性，如果把只读的 `Map` 换成 `MutableMap`
-
-### 6. 局部委托属性
-
-```kotlin
-//你可以将局部变量声明为委托属性
-fun example(computeFoo: () -> Foo) {
-    val memoizedFoo by lazy(computeFoo)
-
-    if (someCondition && memoizedFoo.isValid()) {
-        memoizedFoo.doSomething()
-    }
-}
-//memoizedFoo 变量只会在第一次访问时计算。 如果 someCondition 失败，那么该变量根本不会计算
-```
-
-###  7.属性委托要求
-
-对于一个**只读**属性（即 *val* 声明的），委托必须提供一个操作符函数 `getValue()`，
-
-- `thisRef` —— 必须与 *属性所有者* 类型（对于扩展属性——指被扩展的类型）相同或者是其超类型。
-- `property` —— 必须是类型 `KProperty<*>` 或其超类型。
-
-`getValue()` 必须返回与属性相同的类型（或其子类型）。
-
-```kotlin
-class Resource
-
-class Owner {
-    val valResource: Resource by ResourceDelegate()
-}
-
-class ResourceDelegate {
-    operator fun getValue(thisRef: Owner, property: KProperty<*>): Resource {
-        return Resource()
-    }
-}
-```
-
-对于一个**可变**属性（即 *var* 声明的），委托必须额外提供一个操作符函数 `setValue()`， 该函数具有以下参数：
-
-- `thisRef` —— 必须与 *属性所有者* 类型（对于扩展属性——指被扩展的类型）相同或者是其超类型。
-
-- `property` —— 必须是类型 `KProperty<*>` 或其超类型。
-
-- `value` — 必须与属性类型相同（或者是其超类型）。
-
-  ```kotlin
-  class Resource
-  
-  class Owner {
-      var varResource: Resource by ResourceDelegate()
-  }
-  
-  class ResourceDelegate(private var resource: Resource = Resource()) {
-      operator fun getValue(thisRef: Owner, property: KProperty<*>): Resource {
-          return resource
-      }
-      operator fun setValue(thisRef: Owner, property: KProperty<*>, value: Any?) {
-          if (value is Resource) {
-              resource = value
-          }
-      }
-  }
-  ```
-
-
-
-
-### 8.翻译规则？？？？
-
-### 9.提供委托？？？？
 
 
 
@@ -1405,7 +1206,7 @@ tailrec fun findFixPoint(x: Double = 1.0): Double
 //在递归调用后有更多代码时，不能使用尾递归，并且不能用在 try/catch/finally 块中。目前在 Kotlin for JVM 与 Kotlin/Native 中支持尾递归。
 ```
 
-## 4.高阶函数？？？？？
+## 4.高阶函数 
 
 Kotlin 函数都是[*头等的*](https://zh.wikipedia.org/wiki/头等函数)，这意味着它们可以存储在变量与数据结构中、作为参数传递给其他[高阶函数](https://www.kotlincn.net/docs/reference/lambdas.html#高阶函数)以及从其他高阶函数返回。
 
