--- a/MD/3.协程.md
+++ b/MD/3.协程.md
@@ -517,7 +517,7 @@ println("Now processing of the request is complete")
 
 ## 6 命名协程
 
-```
+```kotlin
 import kotlinx.coroutines.*
 
 fun log(msg: String) = println("[${Thread.currentThread().name}] $msg")
