--- a/kotlin_sample/src/main/MD/3.协程.md
+++ b/kotlin_sample/src/main/MD/3.协程.md
@@ -1,12 +1,21 @@
+协程是一种并发设计模式，您可以在 Android 平台上使用它来简化异步执行的代码。[协程](https://kotlinlang.org/docs/reference/coroutines/coroutines-guide.html)是在版本 1.3 中添加到 Kotlin 的，它基于来自其他语言的既定概念。
 
+在 Android 上，协程有助于管理长时间运行的任务，如果管理不当，这些任务可能会阻塞主线程并导致应用无响应。 
 
-Kotlin 是一门仅在标准库中提供最基本底层 API 以便各种其他库能够利用协程的语言。与许多其他具有类似功能的语言不同，`async` 与 `await` 在 Kotlin 中并不是关键字，甚至都不是标准库的一部分。此外，Kotlin 的 *挂起函数* 概念为异步操作提供了比 future 与 promise 更安全、更不易出错的抽象。
+- **轻量**：您可以在单个线程上运行多个协程，因为协程支持[挂起](https://kotlinlang.org/docs/reference/coroutines/basics.html)，不会使正在运行协程的线程阻塞。挂起比阻塞节省内存，且支持多个并行操作。
+- **内存泄漏更少**：使用[结构化并发](https://kotlinlang.org/docs/reference/coroutines/basics.html#structured-concurrency)机制在一个作用域内执行多项操作。
+- **内置取消支持**：[取消](https://kotlinlang.org/docs/reference/coroutines/cancellation-and-timeouts.html)操作会自动在运行中的整个协程层次结构内传播。
+- **Jetpack 集成**：许多 Jetpack 库都包含提供全面协程支持的[扩展](https://developer.android.com/kotlin/ktx)。某些库还提供自己的[协程作用域](https://developer.android.com/topic/libraries/architecture/coroutines)，可供您用于结构化并发。
 
+`kotlinx.coroutines` 是由 JetBrains 开发的功能丰富的协程库。它包含本指南中涵盖的很多启用高级协程的原语，包括 `launch`、 `async` 等等。
 
-
-`kotlinx.coroutines` 是由 JetBrains 开发的功能丰富的协程库
+```
+implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0-RC'
+```
 
 # 1.协程基础
+
+参考：https://medium.com/androiddevelopers/coroutines-first-things-first-e6187bf3bb21
 
 ```kotlin
 import kotlinx.coroutines.*
@@ -21,125 +30,157 @@ fun main() {
 }
 ```
 
-协程是轻量级的线程。 它们在某些 [CoroutineScope](https://kotlin.github.io/kotlinx.coroutines/kotlinx-coroutines-core/kotlinx.coroutines/-coroutine-scope/index.html) 上下文中与 [launch](https://kotlin.github.io/kotlinx.coroutines/kotlinx-coroutines-core/kotlinx.coroutines/launch.html) *协程构建器* 一起启动。 这里我们在 [GlobalScope](https://kotlin.github.io/kotlinx.coroutines/kotlinx-coroutines-core/kotlinx.coroutines/-global-scope/index.html) 中启动了一个新的协程，这意味着新协程的生命周期只受整个应用程序的生命周期限制。
+协程是轻量级的线程。由 [CoroutineScope](https://kotlin.github.io/kotlinx.coroutines/kotlinx-coroutines-core/kotlinx.coroutines/-coroutine-scope/index.html) 上下文中与 [launch](https://kotlin.github.io/kotlinx.coroutines/kotlinx-coroutines-core/kotlinx.coroutines/launch.html) *协程构建器* 一起启动。 
 
- delay 是一个特殊的 *挂起函数* ，它不会造成线程阻塞，但是会 *挂起* 协程，并且**只能在协程中**使用。
+这里我们在 [GlobalScope](https://kotlin.github.io/kotlinx.coroutines/kotlinx-coroutines-core/kotlinx.coroutines/-global-scope/index.html) 中启动了一个新的协程，这意味着新协程的生命周期只受整个应用程序的生命周期限制。
 
+delay 是一个特殊的 *挂起函数* ，它不会造成线程阻塞，但是会 *挂起* 协程，并且**只能在协程中**使用。
 
+这里有几个概念：
 
-> runBlocking 阻塞
-> join 等待执行完毕
-> suspend  
-> repeat  重复执行
+1.协程作用域 如GlobalScope
 
+2.协程上下文 coroutineContext 
 
+3.协程构建器
 
-## 1.全局协程(GlobalScope)
+## 1.协程作用域(CoroutineScope )
 
-在 [GlobalScope](https://kotlin.github.io/kotlinx.coroutines/kotlinx-coroutines-core/kotlinx.coroutines/-global-scope/index.html) 中启动的活动协程并不会使进程保活。它们就像守护线程。
+> A `**CoroutineScope**` keeps track of any coroutine you create using `launch` or `async` (these are extension functions on `CoroutineScope`). The ongoing work (running coroutines) can be canceled by calling `scope.cancel()` at any point in time.
+
+> You should create a `CoroutineScope` whenever you want to start and control the lifecycle of coroutines in a particular layer of your app. In some platforms like Android, there are KTX libraries that already provide a `CoroutineScope` in certain lifecycle classes such as `viewModelScope` and `lifecycleScope`.
+
+> When creating a `CoroutineScope` it takes a `CoroutineContext` as a parameter to its constructor. You can create a new scope & coroutine with the following code:
+
+ CoroutineScope主要用来跟踪你使用launch或者async（这些都是协程作用域的扩展函数）创建的协程。你也可以在任意时间点使用scope.cancel()取消协程
+
+如果你想在特定的层级开启或者控制协程的生命周期，你就应该创建协程作用域。在 Android 中，某些 ktx 库为某些生命周期类提供了自己的 CoroutineScope，例如，ViewModel 有 `viewModelScope`，Lifecycle 有 `lifecycleScope`
+
+When creating a `CoroutineScope` it takes a `CoroutineContext` as a parameter to its constructor. You can create a new scope & coroutine with the following code:
 
 ```kotlin
-GlobalScope.launch {
-    repeat(1000) { i ->
-        println("I'm sleeping $i ...")
-        delay(500L)
-    }
+// Job and Dispatcher are combined into a CoroutineContext which
+//  
+val scope = CoroutineScope(Job() + Dispatchers.Main)
+val job = scope.launch {
+    // new coroutine
 }
-delay(1300L) // 在延迟后退出
 ```
 
-## 2. 结构化并发
+## 2. 协程上下文 coroutineContext
+
+The `**CoroutineContext**` is a set of elements that define the behavior of a coroutine.
+
+coroutineContext是定义协程行为的元素集
+
+ It’s made of:
+
+- `Job` — controls the lifecycle of the coroutine.控制协程的生命周期
+- `CoroutineDispatcher` — dispatches work to the appropriate thread.给任务分配到合适的线程
+- `CoroutineName` — name of the coroutine, useful for debugging. 协程名称，用于debug
+- `CoroutineExceptionHandler` — handles uncaught exceptions, 处理未捕获的异常
+
+ 我们已经知道将创建一个新的 Job 实例，允许我们控制它的生命周期。其余元素将从其父级的 CoroutineContext 继承（另一个协程或创建它的 CoroutineScope）
+
+由于 CoroutineScope 可以创建协程，并且您可以在协程中创建更多协程，因此创建了隐式任务层次结构。在下面的代码片段中，除了使用 CoroutineScope 创建一个新的协程之外，看看如何在一个协程中创建更多的协程：
+
+```kotlin
+val scope = CoroutineScope(Job() + Dispatchers.Main)
+val job = scope.launch {
+    // New coroutine that has CoroutineScope as a parent
+    val result = async {
+        // New coroutine that has the coroutine started by 
+        // launch as a parent
+    }.await()
+}
+```
+
+## 3.协程构建器
+
+### 1. launch
 
 当我们使用 `GlobalScope.launch` 时，我们会创建一个顶层协程。虽然它很轻量，但它运行时仍会消耗一些内存资源。如果我们忘记保持对新启动的协程的引用，它还会继续运行。
 
-我们可以在代码中使用结构化并发。 我们可以在执行操作所在的指定作用域内启动协程。
-
-在我们的示例中，我们使用 [runBlocking](https://kotlin.github.io/kotlinx.coroutines/kotlinx-coroutines-core/kotlinx.coroutines/run-blocking.html) 协程构建器将 `main` 函数转换为协程。 包括 `runBlocking` 在内的每个协程构建器都将 [CoroutineScope](https://kotlin.github.io/kotlinx.coroutines/kotlinx-coroutines-core/kotlinx.coroutines/-coroutine-scope/index.html) 的实例添加到其代码块所在的作用域中。 我们可以在这个作用域中启动协程而无需显式 `join` 之，因为外部协程（示例中的 `runBlocking`）直到在其作用域中启动的所有协程都执行完毕后才会结束。
+```kotlin
+public fun CoroutineScope.launch(
+    context: CoroutineContext = EmptyCoroutineContext,
+    start: CoroutineStart = CoroutineStart.DEFAULT,
+    block: suspend CoroutineScope.() -> Unit
+): Job
 
 ```
-import kotlinx.coroutines.*
 
-fun main() = runBlocking { // this: CoroutineScope
-    launch { // 在 runBlocking 作用域中启动一个新协程
-        delay(1000L)
-        println("World!")
+context：用于指定协程的上下文
+
+start：用于指定协程的启动方式，默认值为 `CoroutineStart.DEFAULT`，即协程会在声明的同时就立即进入等待调度的状态，即可以立即执行的状态。共4个  (DEFAULT,LAZY,ATOMIC,UNDISPATCHED;)
+
+block：用于传递协程的执行体，即希望交由协程执行的任务
+
+### 2. async
+
+`async` 可以返回协程的执行结果，而 `launch` 不行。通过`await()`方法可以拿到 async 协程的执行结果
+
+```kotlin
+public fun <T> CoroutineScope.async(
+    context: CoroutineContext = EmptyCoroutineContext,
+    start: CoroutineStart = CoroutineStart.DEFAULT,
+    block: suspend CoroutineScope.() -> T
+): Deferred<T> {}
+```
+
+参数和launch一样。
+
+```kotlin
+fun main()= runBlocking<Unit> {
+
+    val time = measureTimeMillis {
+
+        val one = async { doSomethingUsefulone() }
+        val two = async {doSomethingUsefulTwo()}
+
+        println("The answer is ${one.await() + two.await()}")
     }
-    println("Hello,")
+    println("Completed in $time ms")
+
 }
 ```
 
-## 3. 作用域构建器
 
-除了由不同的构建器提供协程作用域之外，还可以使用 [coroutineScope](https://kotlin.github.io/kotlinx.coroutines/kotlinx-coroutines-core/kotlinx.coroutines/coroutine-scope.html) 构建器声明自己的作用域
 
-**runBlocking 与 coroutineScope** 可能看起来很类似，因为它们都会等待其协程体以及所有⼦协程结束。主要
-区别在于，**runBlocking ⽅法会阻塞当前线**程来等待，⽽ coroutineScope 只是**挂起，会释放底层线程**⽤于其他
+### 3.runBlocking
+
+也可以使用 runBlocking 这个顶层函数来启动协程。但是这里runBlocking是阻塞式
+
+**runBlocking ⽅法会阻塞当前线**程来等待，⽽ coroutineScope 只是**挂起，会释放底层线程**⽤于其他
 ⽤途。
 
 ```kotlin
-import kotlinx.coroutines.*
-
-fun main() = runBlocking { // this: CoroutineScope
-    launch { 
-        delay(200L)
-        println("Task from runBlocking")
-    }
-    
-    coroutineScope { // 创建一个协程作用域
-        launch {
-            delay(500L) 
-            println("Task from nested launch")
-        }
-    
-        delay(100L)
-        println("Task from coroutine scope") // 这一行会在内嵌 launch 之前输出
-    }
-    
-    println("Coroutine scope is over") // 这一行在内嵌 launch 执行完毕后才输出
-}
-
-Task from coroutine scope
-Task from runBlocking
-Task from nested launch
-Coroutine scope is over
-```
-
-## 4.提取函数重构 suspend
-
-我们来将 `launch { …… }` 内部的代码块提取到独立的函数中。当你对这段代码执行“提取函数”重构时，你会得到一个带有 `suspend` 修饰符的新函数
-
-```kotlin
-import kotlinx.coroutines.*
-
-fun main() = runBlocking {
-    launch { doWorld() }
-    println("Hello,")
-}
-
-// 这是你的第一个挂起函数
-suspend fun doWorld() {
-    delay(1000L)
-    println("World!")
-}
+public fun <T> runBlocking(context: CoroutineContext = EmptyCoroutineContext, block: suspend CoroutineScope.() -> T): T {}
 ```
 
 
 
-但是如果提取出的函数包含一个在当前作用域中调用的协程构建器的话，该怎么办？ 在这种情况下，所提取函数上只有 `suspend` 修饰符是不够的。为 `CoroutineScope` 写一个 `doWorld` 扩展方法是其中一种解决方案，但这可能并非总是适用，因为它并没有使 API 更加清晰。 惯用的解决方案是要么显式将 `CoroutineScope` 作为包含该函数的类的一个字段， 要么当外部类实现了 `CoroutineScope` 时隐式取得。 作为最后的手段，可以使用 [CoroutineScope(coroutineContext)](https://kotlin.github.io/kotlinx.coroutines/kotlinx-coroutines-core/kotlinx.coroutines/-coroutine-scope.html)，不过这种方法结构上不安全， 因为你不能再控制该方法执行的作用域。只有私有 API 才能使用这个构建器。
+# 2.Job
+
+A `Job` is a handle to a coroutine. For every coroutine that you create (by `launch` or `async`), it returns a `**Job**` instance that uniquely identifies the coroutine and manages its lifecycle. As we saw above, you can also pass a `Job` to a `CoroutineScope` to keep a handle on its lifecycle.
+
+Job 是协程的句柄。对于您创建的每个协程（通过启动或异步），它会返回一个 Job 实例，该实例唯一地标识协程并管理其生命周期。正如我们在上面看到的，您还可以将 Job 传递给 CoroutineScope 以控制其生命周期。
 
 
 
-# 2.取消与超时
+一个任务有几种状态：New, Active, Completing, Completed, Cancelling and Cancelled
+
+ .如果我们访问不了状态，可以访问job的属性。sActive`, `isCancelled` and `isCompleted`
+
+<img src="https://miro.medium.com/max/1400/0*zGHzocA6-lCxk0aX" alt="img" style="zoom:50%;" />
+
+
+
+If the coroutine is in an active state, the failure of the coroutine or calling `job.cancel()` will move the job in the Cancelling state (`isActive = false`, `isCancelled = true`). Once all children have completed their work the coroutine will go in the Cancelled state and `isCompleted = true`.
+
+## 1.取消协程
 
 在一个长时间运行的应用程序中，你也许需要对你的后台协程进行细粒度的控制。 比如说，一个用户也许关闭了一个启动了协程的界面，那么现在协程的执行结果已经不再被需要了，这时，它应该是可以被取消的
-
-cancel()
-
-join()
-
-cancelAndJoin()
-
-
 
 ```kotlin
 val job = launch {
@@ -159,11 +200,13 @@ job: I'm sleeping 1 ...
 job: I'm sleeping 2 ...
 main: I'm tired of waiting!
 main: Now I can quit.
+
+//cancel()
+//join() 解释： Suspends the coroutine until this job is complete.通俗讲等待任务完成。
+//cancelAndJoin()
 ```
 
 一旦 main 函数调用了 `job.cancel`，我们在其它的协程中就看不到任何输出，因为它被取消了。 这里也有一个可以使 [Job](https://kotlin.github.io/kotlinx.coroutines/kotlinx-coroutines-core/kotlinx.coroutines/-job/index.html) 挂起的函数 [cancelAndJoin](https://kotlin.github.io/kotlinx.coroutines/kotlinx-coroutines-core/kotlinx.coroutines/cancel-and-join.html) 它合并了对 [cancel](https://kotlin.github.io/kotlinx.coroutines/kotlinx-coroutines-core/kotlinx.coroutines/-job/cancel.html) 以及 [join](https://kotlin.github.io/kotlinx.coroutines/kotlinx-coroutines-core/kotlinx.coroutines/-job/join.html) 的调用。
-
-## 1.取消是 *协作* 的
 
 协程的取消是 *协作* 的。一段协程代码必须协作才能被取消。 所有 `kotlinx.coroutines` 中的挂起函数都是 *可被取消的* 。它们检查协程的取消， 并在取消时抛出 [CancellationException](https://kotlin.github.io/kotlinx.coroutines/kotlinx-coroutines-core/kotlinx.coroutines/-cancellation-exception/index.html)。 然而，如果协程正在执行计算任务，并且没有检查取消的话，那么它是不能被取消的
 
@@ -184,9 +227,19 @@ delay(1300L) // 等待一段时间
 println("main: I'm tired of waiting!")
 job.cancelAndJoin() // 取消一个作业并且等待它结束
 println("main: Now I can quit.")
+
+
+job: I'm sleeping 0 ...
+job: I'm sleeping 1 ...
+job: I'm sleeping 2 ...
+main: I'm tired of waiting!
+job: I'm sleeping 3 ...
+job: I'm sleeping 4 ...
+main: Now I can quit.
+
 ```
 
-
+即便执行了cancelAndJoin，还是执行两次循环日志。
 
 ## 2 使计算代码可取消
 
@@ -213,13 +266,20 @@ delay(1300L) // 等待一段时间
 println("main: I'm tired of waiting!")
 job.cancelAndJoin() // 取消该作业并等待它结束
 println("main: Now I can quit.")
+
+
+job: I'm sleeping 0 ...
+job: I'm sleeping 1 ...
+job: I'm sleeping 2 ...
+main: I'm tired of waiting!
+main: Now I can quit.
 ```
 
 ## 3 在 `finally` 中释放资源
 
 我们通常使用如下的方法处理在被取消时抛出 CancellationException 的可被取消的挂起函数。比如说，try {……} finally {……} 表达式以及 Kotlin 的 use 函数一般在协程被取消的时候执行它们的终结动作：
 
-```
+```kotlin
 
 val job = launch {
     try {
@@ -266,7 +326,7 @@ println("main: Now I can quit.")
 
 
 
-##  4 超时 timeout
+##  5 超时 timeout
 
 在实践中绝大多数取消一个协程的理由是它有可能超时。 当你手动追踪一个相关 [Job](https://kotlin.github.io/kotlinx.coroutines/kotlinx-coroutines-core/kotlinx.coroutines/-job/index.html) 的引用并启动了一个单独的协程在延迟后取消追踪，这里已经准备好使用 [withTimeout](https://kotlin.github.io/kotlinx.coroutines/kotlinx-coroutines-core/kotlinx.coroutines/with-timeout.html) 函数来做这件事。 
 
